vendor/feedvalidator/demo/testcases/opml/errors/closedbody.opml
<!--
  Description:  <outline> nodes that come after a closed <body/> element
  Expect:       UndefinedElement{parent:opml,element:outline}
-->

<opml version="1.1">
  <head/>
  <body/>
  <outline type="rss" text="Nick Bradbury" xmlUrl="http://feeds.feedburner.com/NickBradbury"/>
</opml>
